@@ -1,3 +1,10 @@
+Thu Mar 25 09:10:44 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* ace/OS_NS_Thread.h:
+
+	  Thanks to Martin Corino <mcorino@remedy.nl> for supplying patches
+	  that fixes build problems on non-pthread platforms.
+
 Wed Mar 24 22:36:01 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* ace/POSIX_Proactor.cpp:
